全面書き換え

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,10 @@
       </aside>
 
       <article class="content">
+
         <form method="post" action="_callback_url" id="contact_form">
-          <table class="contact">
+
+          <table class="block_input">
             <tr>
               <th>お名前</th>
               <td><input type="text" id="contact_name"> </td>
@@ -61,8 +63,13 @@
               <td><input type="text" id="contact_content"> </td>
             </tr>
           </table>
-          <p><input type="submit" value="送信" id="contact_submit"> </p>
+
+          <p class="block_submit">
+            <input type="submit" value="送信" id="btn_submit">
+          </p>
+
         </form>
+
       </article>  
     </div>
 
